add security, add swagger, validation, exception handling